[metadata]
name = reclass-tools
version = 0.0.1
summary = QA tools for manipulating reclass models
description-file =
    README.md
author = Dennis Dmitriev
author-email = dis-xcom@gmail.com
home-page = https://github.com/dis-xcom/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[files]
packages = reclass_tools

[entry_points]
console_scripts =
    reclass-dump-params = reclass_tools.cli:dump_params
    reclass-remove-key = reclass_tools.cli:remove_key
    reclass-show-key = reclass_tools.cli:show_key
    reclass-inventory-list = reclass_tools.cli:inventory_list
    reclass-vcp-list = reclass_tools.cli:vcp_list
    reclass-create-inventory-context = reclass_tools.cli:create_inventory_context
